# Copyright (C) 2006, 2009, 2010 EPITA Research and Development
# Laboratory (LRDE).
#
# This file is part of Olena.
#
# Olena is free software: you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation, version 2 of the License.
#
# Olena is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Olena.  If not, see <http://www.gnu.org/licenses/>.

# texi2dvi: produce DVI (or PDF) files from Texinfo (or (La)TeX) sources.
# Part of the Texinfo project (http://www.gnu.org/software/texinfo/).
EXTRA_DIST = texi2dvi

# File generators.
EXTRA_DIST += generate_dist_headers.sh build_unit_test.sh
